# mtgsim

./: Cargo.toml  grakmaw.txt  metadata.json
decks/: ur-dragon.txt
src/: card.rs  carddb.rs  cardpile.rs  game.rs  main.rs  mana.rs  manacost.rs  oracle.rs  stats.rs  zone.rs
