[package]
name = "mtgsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
reqwest = { version = "0.11.14", features = ["blocking"] }
regex = "1"
json = "0.12.4"
itertools = "0.10.5"
enumflags2 = "0.7.5"
clap = { version = "4.1.6", features = ["derive"] }
